	  device/lib/r2ka/setjmp.s
	  device/lib/r3ka/setjmp.s
	  support/regression/tests/setjmp.c,
	  support/regression/tests/longjmp.c:
	  Fix setjmp/longjmp return value for Rabbits.
	* device/include/string.h,
	  device/lib/strlen.v,
	  device/lib/strnlen.v,
	  device/lib/strndup.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  device/lib/pic14/libc/Makefile.am,
	  device/lib/pic14/libc/Makefile.in:
	  C2Y strnlen.
	* support/regression/tests/bug-3730.c,
	  support/regression/tests/bug-3740.c:
	  Disable warnings on (intentionally) unused parameters in two regression tests.
	* device/lib/tlcs90/setjmp.s:
	  Fix TLCs-90 interrupt flag handling in longjmp.

2024-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp:
	  Fix handling of edges in vertex removal from stack conflict graph on spill location parameter merge.

2024-06-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Fix test for ports without banked function calls.

2024-06-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Add a regression test for a reported bug that I haven't been able to reproduce locally.

2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCdflow.h:
	  Fix a z80 codegen issue in the handling of information from generalized constant propagation.

2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3740.c:
	  Fix bug #3740.

2024-05-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c:
	  Parse ZX Spectrum Next nextreg instruction.

2024-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp,
	  src/hc08/gen.c:
	  Reject boost 1.85.0.

2024-05-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Skip leading zeroes on comparisons and some increments.

2024-05-28 Philipp Klaus Krause <philipp@colecovision.eu>
